# AdventOfCode2020

day-01-report-repair/: ReportRepairer.hs
day-02-password-philosophy/: Main.hs  PasswordChecker.hs  day02.cabal
day-03-toboggan-trajectory/: Main.hs  Toboggan.hs  day03.cabal
day-04-passport-processing/: Main.hs  Passport.hs  day04.cabal
day-05-binary-boarding/: Boarding.hs  Main.hs  day05.cabal
day-06-custom-customs/: Customs.hs  Main.hs  day06.cabal
day-07-handy-haversacks/: Haversacks.hs  Main.hs  day07.cabal
day-08-handheld-halting/: Halting.hs  Main.hs  day08.cabal
day-09-encoding-error/: day09.cabal
day-09-encoding-error/src/: Encoding.hs  Main.hs
day-10-adapter-array/: day10.cabal
day-10-adapter-array/src/: Adapter.hs  Main.hs
day-11-seating-system/: day11.cabal
day-11-seating-system/src/: Main.hs  Seating.hs
day-12-rain-risk/: day12.cabal
day-12-rain-risk/src/: Main.hs  Navigation.hs
day-13-shuttle-search/: day13.cabal
day-13-shuttle-search/src/: Main.hs  Shuttle.hs
day-14-docking-data/: day14.cabal
day-14-docking-data/src/: Docking.hs  Main.hs
day-15-rambunctious-recitation/: day15.cabal
day-15-rambunctious-recitation/src/: Main.hs  Recitation.hs
day-16-ticket-translation/: day16.cabal
day-16-ticket-translation/src/: Main.hs  Ticket.hs
day-17-conway-cubes/: day17.cabal
day-17-conway-cubes/src/: Cubes.hs  Main.hs
day-18-operation-order/: day18.cabal
day-18-operation-order/src/: Main.hs  Operation.hs  Resolver.hs
day-19-monster-messages/: day19.cabal  test1.txt
day-19-monster-messages/src/: Main.hs  Monster.hs
day-20-jurassic-jigsaw/: day20.cabal
day-20-jurassic-jigsaw/src/: Jigsaw.hs  Main.hs
