cabal-version:       >=1.10
name:                day02
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day02
  main-is:             Main.hs
  other-modules:       PasswordChecker
  build-depends:       base >=4.13 && <4.14,
                       regex-pcre >= 0.95
  default-language:    Haskell2010
