cabal-version:       >= 1.10
name:                day04
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day04
  main-is:             Main.hs
  other-modules:       Passport
  build-depends:       base >= 4.13 && < 4.14,
                       split >= 0.2.2,
                       regex-pcre >= 0.95
  default-language:    Haskell2010