cabal-version:       >= 1.10
name:                day06
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day06
  main-is:             Main.hs
  other-modules:       Customs
  build-depends:       base >= 4.13 && < 4.14,
                       containers >= 0.6.4,
                       split >= 0.2.2
  default-language:    Haskell2010