cabal-version:       >= 1.10
name:                day07
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day07
  main-is:             Main.hs
  other-modules:       Haversacks
  build-depends:       base >= 4.13 && < 4.14,
                       containers >= 0.6.2,
                       regex-pcre >= 0.95,
                       split >= 0.2.3
  default-language:    Haskell2010