cabal-version:       >= 1.10
name:                day08
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day08
  main-is:             Main.hs
  other-modules:       Halting
  build-depends:       base >= 4.13 && < 4.14
  default-language:    Haskell2010