cabal-version:       >= 1.10
name:                day11
version:             0.1.0.0
author:              The Lusitanian king
build-type:          Simple

executable day11
  main-is:             Main.hs
  other-modules:       Seating
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      src
  default-language:    Haskell2010