cabal-version:       >= 1.10
name:                day12
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day12
  main-is:             Main.hs
  other-modules:       Navigation
  build-depends:       base >= 4.13 && < 4.14
  hs-source-dirs:      src
  default-language:    Haskell2010
