cabal-version:       >= 1.10
name:                day15
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day15
  main-is:             Main.hs
  other-modules:       Recitation
  build-depends:       base >= 4.13 && < 4.14,
                       containers >= 0.6.4
  hs-source-dirs:      src
  default-language:    Haskell2010
