cabal-version:       >= 1.10
name:                day16
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day16
  main-is:             Main.hs
  other-modules:       Ticket
  build-depends:       base >= 4.13 && < 4.14,
                       regex-pcre >= 0.95,
                       split >= 0.2.3
  hs-source-dirs:      src
  default-language:    Haskell2010
