cabal-version:       >= 1.10
name:                day18
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day18
  main-is:             Main.hs
  other-modules:       Operation,
                       Resolver
  build-depends:       base >= 4.13 && < 4.14,
                       hint >= 0.9.0,
                       MissingH >= 1.4.3
  hs-source-dirs:      src
  default-language:    Haskell2010