cabal-version:       >= 1.10
name:                day19-monster-messages
version:             0.1.0.0
author:              AlexLusitania
build-type:          Simple

executable day19
  main-is:             Main.hs
  other-modules:       Monster
  build-depends:       base >= 4.13 && < 4.14,
                       split >= 0.2.3
  hs-source-dirs:      src
  default-language:    Haskell2010