cabal-version:       >= 1.10
name:                day20
version:             0.1.0.0
author:              The Lusitanian King
build-type:          Simple

executable day20
  main-is:             Main.hs
  other-modules:       Jigsaw
  build-depends:       array >= 0.5.4,
                       base >= 4.13 && < 4.14,
                       containers >= 0.6.4,
                       split >= 0.2.3
  hs-source-dirs:      src
  default-language:    Haskell2010